[resultui] fix build page not rendering correctly on Safari
1. Fix test results search bar not sticking to the top properly.
2. Fix "collapse all" button text wraps to the 2nd line.
3. Fix test results filter box too tall on Safari.
4. Update a screenshot in integration tests.

R=gavinmak@google.com, mwarton, nodir

--- a/milo/frontend/resultui/assets/styles/style.css
+++ b/milo/frontend/resultui/assets/styles/style.css
@@ -53,4 +53,6 @@ html {
   --light-active-color: #d9edfc;
   --delete-color: var(--failure-color);
   --mdc-theme-primary: var(--active-color);
+
+  --expand-button-width: 155px;
 }
